fix: block draggable option of all images align price from right in food box item shadow on bottom in menu

--- a/src/packages/menu/CSS/menuFoods.module.css
+++ b/src/packages/menu/CSS/menuFoods.module.css
@@ -16,13 +16,17 @@
     margin-top: 40px;
 }
 
-.cost {
+.costBox {
     margin-right: 10px;
-    margin-bottom: 12px;
-    font-size: 12px;
-    min-width: 34px;
+    margin-bottom: 4px;
+    font-size: 14px;
+    width: 40px;
     display: flex;
     align-items: flex-end;
+}
+
+.costBox span {
+    margin-left: auto;
 }
 
 .searchBar {
