--- a/src/packages/pattern.module.css
+++ b/src/packages/pattern.module.css
@@ -60,24 +60,25 @@
     padding-left: 0;
 }
 
-.shopsOrFood {
+.shopOrFood {
     width: 250px;
     height: 200px;
     background: #1b1d23;
     position: relative;
     display: flex;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.75);
+    border-radius: 10px;
     cursor: url("https://cdn.custom-cursor.com/db/4129/32/arrow2402.png"), auto;
 }
 
-.shopsOrFood:active {
+.shopOrFood:active {
     box-shadow: 0 0 16px 4px rgba(0, 0, 0, 0.75);
 }
 
 .img {
     width: 100%;
     height: 100%;
-    border-radius: 10px;
+    border-radius: inherit;
     /*object-fit: cover;*/
 }
 
@@ -90,13 +91,14 @@
     color: white;
     width: 250px;
     height: 45px;
+    border-radius: inherit;
+    padding-bottom: 7px;
     background: linear-gradient(360deg, rgba(13, 13, 13, 0.45) 0%, rgba(13, 13, 13, 0) 100%);
 }
 
 .nameFood {
-    margin-left: 7px;
+    margin: 0 7px;
     display: flex;
     align-items: flex-end;
-    margin-bottom: 10px;
-    max-width: 195px;
+    width: 186px;
 }
